src/snapshots/vm__parser__test__parse_function_call.snap
---
source: src/parser.rs
expression: "function_call_expr(\"a()\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 3,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: FunctionCall {
                calling: Ast {
                    node: Ident(
                        u!("a"),
                    ),
                    span: LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "a",
                        extra: (),
                    },
                },
                arguments: [],
            },
            span: LocatedSpan {
                offset: 1,
                line: 1,
                fragment: "()",
                extra: (),
            },
        },
    ),
)
