src/snapshots/vm__parser__test__parse_group-2.snap
---
source: src/parser.rs
expression: "group_expr(\"123)\".into())"
---
Err(
    Error(
        VerboseError {
            errors: [
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "123)",
                        extra: (),
                    },
                    Char(
                        '(',
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "123)",
                        extra: (),
                    },
                    Context(
                        "Group",
                    ),
                ),
            ],
        },
    ),
)
