src/snapshots/vm__parser__test__parse_group.snap
---
source: src/parser.rs
expression: "group_expr(\"(123)\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 5,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: Group(
                Ast {
                    node: Literal(
                        Int(
                            123,
                        ),
                    ),
                    span: LocatedSpan {
                        offset: 1,
                        line: 1,
                        fragment: "123",
                        extra: (),
                    },
                },
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "(123)",
                extra: (),
            },
        },
    ),
)
