src/snapshots/vm__parser__test__parse_ident-2.snap
---
source: src/parser.rs
expression: "ident_expr(\"AS_23ds_s\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 9,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: Ident(
                "AS_23ds_s",
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "AS_23ds_s",
                extra: (),
            },
        },
    ),
)
