src/snapshots/vm__parser__test__parse_ident-4.snap
---
source: src/parser.rs
expression: "ident_expr(\"left-right\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 4,
            line: 1,
            fragment: "-right",
            extra: (),
        },
        Ast {
            node: Ident(
                u!("left"),
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "left",
                extra: (),
            },
        },
    ),
)
