src/snapshots/vm__parser__test__parse_ident-5.snap
---
source: src/parser.rs
expression: "ident_expr(\"a\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 1,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: Ident(
                u!("a"),
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "a",
                extra: (),
            },
        },
    ),
)
