src/snapshots/vm__parser__test__parse_ident.snap
---
source: src/parser.rs
expression: "ident_expr(\"haha\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 4,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: Ident(
                Ident(
                    "haha",
                ),
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "haha",
                extra: (),
            },
        },
    ),
)
