src/snapshots/vm__parser__test__parse_let_expr.snap
---
source: src/parser.rs
expression: "let_statement(\"let yeet;\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 9,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: VariableDeclaration {
                ident: Ident(
                    "yeet",
                ),
                value: None,
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "let yeet",
                extra: (),
            },
        },
    ),
)
